--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2014,8 +2014,8 @@ h1, h2, h3, h4, h5,
 .play-now .caption {
     font-size: 18px; }
 
-.btn.btn-primary {
-    padding: 12px 25px; }
+/*.btn.btn-primary {
+    padding: 12px 25px; }*/
 
 .btn.btn-white {
     background: #fff;
